feat: add a way to refresh file metadatas
